--- a/Blog/stylesheet.css
+++ b/Blog/stylesheet.css
@@ -4,19 +4,18 @@ body {
 
 h1 {
 	font-family: Helvetica;
-	font-weight: bold;
 	letter-spacing: 3px;
 	text-align: left;
 	color: white;
-}
-
-#title {
 	color: #F20A57;	
 }
 
 #navbar {
 	color: white;
-	text-align: right;
+}
+
+#navbar ul li {
+	float: right;
 }
 
 #left {
