--- a/Blog/stylesheet.css
+++ b/Blog/stylesheet.css
@@ -1,27 +1,90 @@
+@font-face {
+    font-family: 'robotoregular';
+    src: url('roboto-regular-webfont.eot');
+    src: url('roboto-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('roboto-regular-webfont.woff') format('woff'),
+         url('roboto-regular-webfont.ttf') format('truetype'),
+         url('roboto-regular-webfont.svg#robotoregular') format('svg');
+    font-weight: normal;
+    font-style: normal;}
+
 body {
-	background-color: #797985;
-}
+	width: 800px;
+	margin: 0px 0px 0px 20px;
+	padding: 0px 0px 0px 0px;
+	background-color: white;
+	font-family: 'robotoregular'}
 
 h1 {
-	font-family: Helvetica;
-	letter-spacing: 3px;
-	text-align: left;
-	color: white;
-	color: #F20A57;	
-}
+	margin: 10px 0px 3px 0px;
+	line-height: 1;}
 
-#navbar {
-	color: white;
-}
+h2 {
+	margin: 5px 0px 0px 0px;
+	line-height: 1;}
 
-#navbar ul li {
+h5 {
+	margin: 5px 0px 0px;
+	line-height: 1;}
+
+#header {
+	width: 100%;
+	float: left;
+	border-bottom: 1px solid black;}
+
+#title {
+	float: left;}
+
+#nav {
 	float: right;
+	line-height: 1;
+	margin: 0px;}
+
+ul {	
+	padding: 0px 0px 0px 0px;
+	margin: 26px 0px 3px 0px;}
+
+#nav ul {
+	line-height: 1;}
+
+#nav ul li {
+	list-style-type: none;
+	display: inline;
+	padding: 10px;
+	margin: 0px;
+	line-height: 1;}
+
+#aside {
+	background-color: silver;
+	float: left;
+	clear: both;
+	width: 190px;
+	margin: 0px 0px 5px 0px;
+	padding: 0px 5px 5px 5px;}
+
+#aside ul {
+	margin-top: 10px;
 }
 
-#left {
-	color: white;
+#aside ul li {
+	list-style-type: none;
+	padding: 10px 0px 10px 0px;}
+
+
+#main {
+	background-color: silver;
+	float: left;
+	width: 580px;
+	margin: 0px 0px 5px 5px;
+	padding: 5px 0px 5px 5px;}
+
+#feature {
+	margin-top: 10px;
 }
 
-#right {
-	color: white;
-}
+#footer {
+	width: 100%;
+	float: left;
+	background-color: yellow;
+	border-top: 1px solid black;}
+
