--- a/Blog/stylesheet.css
+++ b/Blog/stylesheet.css
@@ -1,30 +1,36 @@
 @font-face {
-    font-family: 'robotoregular';
-    src: url('roboto-regular-webfont.eot');
-    src: url('roboto-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('roboto-regular-webfont.woff') format('woff'),
-         url('roboto-regular-webfont.ttf') format('truetype'),
-         url('roboto-regular-webfont.svg#robotoregular') format('svg');
+    font-family: 'league_gothicregular';
+    src: url('leaguegothic-regular-webfont.eot');
+    src: url('leaguegothic-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('leaguegothic-regular-webfont.woff') format('woff'),
+         url('leaguegothic-regular-webfont.ttf') format('truetype'),
+         url('leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
     font-weight: normal;
-    font-style: normal;}
+    font-style: normal;
+}
 
 body {
-	width: 800px;
+	width: 650px;
 	margin: 0px 0px 0px 20px;
 	padding: 0px 0px 0px 0px;
 	background-color: white;
-	font-family: 'robotoregular'}
+	font-family: sans-serif;
+	font-size:small;}
 
 h1 {
-	margin: 10px 0px 3px 0px;
-	line-height: 1;}
+	margin: 0px;
+	line-height: 1;
+	font-size: 60px;
+	font-family: 'league_gothicregular';}
 
 h2 {
-	margin: 5px 0px 0px 0px;
-	line-height: 1;}
+	margin: 0px 0px 0px 0px;
+	line-height: 1;
+	font-family: 'league_gothicregular';
+	text-transform: uppercase;}
 
 h5 {
-	margin: 5px 0px 0px;
+	margin: 5px 0px 0px 0px;
 	line-height: 1;}
 
 #header {
@@ -42,7 +48,7 @@ h5 {
 
 ul {	
 	padding: 0px 0px 0px 0px;
-	margin: 26px 0px 3px 0px;}
+	margin: 40px 0px 3px 0px;}
 
 #nav ul {
 	line-height: 1;}
@@ -50,41 +56,45 @@ ul {
 #nav ul li {
 	list-style-type: none;
 	display: inline;
-	padding: 10px;
+	padding: 8px;
 	margin: 0px;
-	line-height: 1;}
+	line-height: 1;
+	}
 
 #aside {
-	background-color: silver;
 	float: left;
 	clear: both;
-	width: 190px;
+	width: 175px;
 	margin: 0px 0px 5px 0px;
 	padding: 0px 5px 5px 5px;}
 
 #aside ul {
-	margin-top: 10px;
+	margin-top: 25px;
 }
 
 #aside ul li {
 	list-style-type: none;
-	padding: 10px 0px 10px 0px;}
+	padding: 8px 0px 0px 0px;}
 
 
 #main {
-	background-color: silver;
 	float: left;
-	width: 580px;
-	margin: 0px 0px 5px 5px;
+	width: 450px;
+	margin: 25px 0px 5px 5px;
 	padding: 5px 0px 5px 5px;}
 
-#feature {
-	margin-top: 10px;
-}
+#feature1, #feature2 {
+	padding-bottom: 20px;
+	padding-left: 20px;}
 
 #footer {
 	width: 100%;
 	float: left;
-	background-color: yellow;
-	border-top: 1px solid black;}
+	border-top: 1px solid black;
+}
+
+#footer p {
+	margin-top: 5px;
+	line-height: 1;
+}
 
